<resources>
    <string name="app_name">Login</string>
    <string name="password_text">Password</string>
    <string name="log_in_btn">Login</string>
    <string name="isAdminChk">isAdmin?</string>
    <string name="login_text">Username</string>
    <string name="createUserButton">Create User</string>
    <string name="updateUserButton">Update User</string>
    <string name="deleteUserButton">Delete User</string>
    <string name="Create_User">Create User</string>
    <string name="Create_Admin">Create Admin</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Address">Address</string>
    <string name="Surname">Surname</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Birth_Date">Birth Date</string>
</resources>