<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createUser"
        android:text="@string/createUserButton" />

    <Button
        android:id="@+id/updateUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="updateUser"
        android:text="@string/updateUserButton" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteUser"
        android:text="@string/deleteUserButton" />

</LinearLayout>