<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/login_input"
        android:layout_width="280dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:hint="@string/login_text"
        android:textAlignment="center"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="280dp"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_text"
        android:autofillHints=""
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="159dp"
        android:layout_height="61dp"
        android:background="#E91E63"
        android:onClick="login_submit"
        android:text="@string/log_in_btn"
        android:textColorLink="#0025FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        app:rippleColor="#E91E63" />

</androidx.constraintlayout.widget.ConstraintLayout>